@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2023,v 1.6948 2023/11/14 01:08:52 gutteridge Exp $
+$NetBSD: CHANGES-2023,v 1.6949 2023/11/14 01:10:07 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2023:
 
@@ -10002,3 +10002,4 @@ Changes to the packages collection and infrastructure in 2023:
 	Updated x11/lxqt-qtplugin to 1.4.0 [gutteridge 2023-11-14]
 	Removed editors/xournal successor editors/xournalpp [wiz 2023-11-14]
 	Updated audio/pavucontrol-qt to 1.4.0 [gutteridge 2023-11-14]
+	Removed graphics/libgnomecanvas [wiz 2023-11-14]
